# ccloxx

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
UserScripts/: Bad_Closure.lox  Good_Closure.lox  closure.lox  fib.lox
src/: ast.hpp  ast_printer.cpp  ast_printer.hpp  env.hpp  error_handler.cpp  error_handler.hpp  interpreter.cpp  interpreter.hpp  main.cpp  object.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp
